css/style.css
::root{
	--border-color: rgba(201,159,121,0.5);
}

@font-face {
  font-family: breathe-fire;
  src: url(../assets/fonts/BreatheFireIi-2z9W.ttf);
}
@font-face {
  font-family: daleLands;
  src: url(../assets/fonts/DalelandsUncial-BOpn.ttf);
}
@font-face {
  font-family: draconis;
  src: url(../assets/fonts/Draconis.ttf);
}

html {
  box-sizing: border-box;
  user-select: none;
}

#audio-toggle{
  z-index: 110;
  position:absolute;
  font-size: 50px;
  left:10px;
  top:10px;
}

#audio-toggle:hover{
  filter: brightness(1.2);
}
#audio-toggle:active{
  filter: brightness(.8);
}

#title-button{
  position : absolute;
  top : 440px;
  left : 700px;
  font-family: dalelands;
  font-size : 32px;
  padding : 10px;
  border-radius : 10px;
  background: transparent;
  border: none;
}

#title-button:hover{
  filter:drop-shadow(0 0 5px);
  color: white;
  cursor: pointer;
}


*, 
*::before, /* All ::before pseudo-elements */
*::after { /* All ::after pseudo-elements */
  box-sizing: inherit;
}

body{
  margin:0;
  background-color: gray;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  background-image: url("../assets/images/Grass\ Dark\ Rocky.jpg");
  background-repeat: repeat;
  background-size: 300px;
  z-index: 4;
}

#container-top{
  display:flex;
  justify-content: space-between;
  background-color: gray;
  max-width: 1600px;
}


#border-ext{  
  background-image: url("../assets/images/gameBorder.png");
  background-position: center;
  background-repeat: no-repeat;
  width: 1900px;
  display:flex;
  justify-content: center;
  align-items: center;
  height: 1500px;
}

#container-bottom{
  display:flex;
  justify-content: space-between;
  background-color: gray;
  max-width: 1600px;
  background-image: url("../assets/images/parchment.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#display-area{
  background-color: lightgray;
  position: relative;
  width: 1280px;
  height: 800px;
  background-size: cover;
  z-index: 1;
}

#left-door{
  background-image: url("../assets/images/tile_objects/leftDoor.png");
  background-size: cover;
  position:absolute;
  width: 100%;
  height: 100%;
}

#game-over-container{
  display:flex;
  flex-direction: column;
  gap: 20px;
  align-items: center;
  background-color: rgba(220, 220, 220, .8);
  padding: 20px 40px;
  border-radius: 20px;
}

.game-over-div{
  color: black;
  font-size: 40px;
  font-family: dalelands;
}

#game-over-container button{
  padding: 5px 15px;
  margin-top:50px;
  font-size: 32px;
  font-family: dalelands;
}

#splash-screen{
  width: 1600px;
  height: 1130px;
  position: absolute;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#transition{
  z-index: 100;
  width: 100%;
  height: 100%;
  position: absolute;
  transition: .2s;
}

#right-door{
  background-image: url("../assets/images/tile_objects/rightDoor.png");
  background-size: cover;
  position:absolute;
  width: 100%;
  height: 100%;
}
#torch-left{
  background-image: url("../assets/images/tile_objects/torch_L.png");
  background-size: cover;
  position:absolute;
  width: 100%;
  height: 100%;
}
#torch-right{
  background-image: url("../assets/images/tile_objects/torch_R.png");
  background-size: cover;
  position:absolute;
  width: 100%;
  height: 100%;
}

#back-door{
  background-size: cover;
  position:absolute;
  width: 100%;
  height: 100%;
}

#right-panel{
  width: 320px;
  background-color: rgb(170, 161, 161);
  background-image: url("../assets/images/char_panel_bg.png");
  display:flex;
  flex-direction: column;
  align-items: center;
  max-height: 800px;
}

#character-panel{
  display:flex;
  flex-direction: column;
  font-family: daleLands, serif;
  font-size: 24px;
  align-items: center;
  padding-top:20px;
  text-align: center;
}

#character-panel *{
  margin: 5px 0;
}

#portrait{
  border-radius: 5px;
  background-color: lightgray;
  background-image: url("../assets/images/char_male.png");
  background-size: cover;
  width: 200px;
  height: 200px;
}

.health-bar{
  background-color: rgb(184, 0, 0);
  color:white;
  border-radius: 20px;
  text-align: center;
  transition: .5s;
}

#monster-health-bars{
  display: flex;
  flex-direction: column;
  align-items: center;
  width:100%;
  margin-top: 30px;
  height:400px;
}

#monster-health-bars *{
  margin:6px 0;
  font-family: daleLands;
  height: 10px;
}

#map-inv-panel{
  margin-top: 20px;
  width: 320px;
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#attack{
  font-family: daleLands;
  font-size: 24px;
  width: 150px;
  height: 50px;
  border-radius: 10px;
}

#monster-container{
  display:flex;
  height:550px;
  flex-wrap: wrap;
  justify-content: space-around;
}

.monster{
  border:none;
  border-radius: 100%;
  z-index: 101;
}

#Mimic_0{
  border-radius: 0;
}

.monster:hover{
  filter: brightness(1.5);  
}

.moving{
  transition: .5s;
}

img{
  border: none;
}

#char-mana{
  background-color: rgb(1, 1, 194);
  color:white;
  border-radius: 20px;
  text-align: center;
}


#text-wrapper{
  padding:25px;
}

#text-log{
  height:275px;
  max-height: 300px;
  width: 1230px;
  border: 3px solid black;
  border-radius: 0;
  font-family: draconis;
  font-size: 30px;
  padding: 25px;
  overflow-y: scroll;
  scrollbar-color: black;
  line-height: 1.25;

}

#nav{
  width:320px;
  display:flex;
  justify-content: center;
  background-image: url("../assets/images/nav/arrow_surround.png");
  background-repeat: no-repeat;
}

#button-container{
  display:flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  gap: 10px;
}

#button-container div{
  display:flex;
  gap: 10px;
  background-color: transparent;
}

.nav-btn{
  background-size: cover;
  background-color: antiquewhite;
  box-shadow: 0 0 5px;
  width: 75px;
  height: 75px;
  border-radius: 5px;
}

.nav-spc{
  width: 75px;
  height: 75px;
}

.nav-btn:hover{
  filter: brightness(1.3);
}

.nav-btn:active{
  filter: brightness(0.7);
  box-shadow: inset 0 0 3px;
}

#nav-move-forward{
  background-image: url('../assets/images/nav/forward.png');
}
#nav-move-back{
  background-image: url('../assets/images/nav/back.png');
}
#nav-move-left{
  background-image: url('../assets/images/nav/strafe_left.png');
}
#nav-move-right{
  background-image: url('../assets/images/nav/strafe_right.png');
}

